firstname to firstName and lastname to lastName
