# src/models/patient.model.js
@@ -9,13 +9,13 @@ const PatientSchema = new Schema({
         type: String,
         required: [true, 'A patient needs to have a BSN.'],
     },
-    firstname: {
+    firstName: {
         type: String,
-        required: [true, 'A patient needs to have a firstname.'],
+        required: [true, 'A patient needs to have a firstName.'],
     },
-    lastname: {
+    lastName: {
         type: String,
-        required: [true, 'A patient needs to have a lastname.'],
+        required: [true, 'A patient needs to have a lastName.'],
     },
     adress: {
         type: String,
